bug fix 优化在 Safari 中 时间间隔大于100年时弹出过慢的问题

--- a/example/index.html
+++ b/example/index.html
@@ -63,6 +63,7 @@
             <a href="javascript:;" id="topTipsBtn" class="weui-btn weui-btn_default">TopTips</a>
             <a href="javascript:;" id="pickerBtn" class="weui-btn weui-btn_default">Picker</a>
             <a href="javascript:;" id="datePickerBtn" class="weui-btn weui-btn_default">DatePicker</a>
+            <a href="javascript:;" id="datePickerBtn100" class="weui-btn weui-btn_default">DatePicker 大于100年</a>
             <a href="javascript:;" id="multiPickerBtn" class="weui-btn weui-btn_default">Multi-Picker</a>
             <a href="javascript:;" id="cascadePickerBtn" class="weui-btn weui-btn_default">Cascade-Picker</a>
         </div>
